--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "07-restserver",
     "version": "1.0.0",
+    "engines": {
+        "node": "11.5.0"
+    },
     "description": "",
     "main": "index.js",
     "scripts": {
@@ -10,7 +13,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "body-parser": "^1.18.2",
-        "express": "^4.16.2"
+        "bcrypt": "^3.0.6",
+        "body-parser": "^1.18.3",
+        "express": "^4.16.4",
+        "mongoose": "^5.5.1",
+        "underscore": "^1.9.1"
+    },
+    "devDependencies": {
+        "mongoose-unique-validator": "^2.0.2"
     }
 }
